backend-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result-container
        image: valerietxh/result:${IMAGE_TAG}
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result 
  ports:
    - port: 80  
      targetPort: 80
  type: ClusterIP
